--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -547,7 +547,7 @@ font_size 11
 #: when using the wheel. With a negative number, the minimum number of
 #: lines will always be added.
 
-# touch_scroll_multiplier 1.0
+ touch_scroll_multiplier 10
 
 #: Multiplier for the number of lines scrolled by a touchpad. Note
 #: that this is only used for high precision scrolling devices on
@@ -1454,7 +1454,7 @@ window_padding_width 7
 
 #: The foreground and background colors.
 
-background_opacity 0.5
+background_opacity 0.65
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
